[tool.poetry]
name = "powerlevel"
version = "0.1.0"
description = ""
authors = ["Peter Eklund <peter.eklund@ideoflux.com>"]
readme = "README.md"
packages = [{include = "powerlevel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
ruff = "^0.0.282"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = ["jupyter_notebook_config.py"]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
